cluster/apps/oauth2-proxy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
  template:
    metadata:
      labels:
        app: oauth2-proxy
    spec:
      containers:
        - args:
            - --provider=google
            - --upstream=file:///dev/null
            - --http-address=0.0.0.0:4180
            - --cookie-domain=.kblb.io
            - --whitelist-domain=.kblb.io
            - --authenticated-emails-file=/volume/emails
            - --redirect-url=https://auth.kblb.io/oauth2/callback
            - --skip-provider-button=true

          image: quay.io/oauth2-proxy/oauth2-proxy:v7.7.1
          imagePullPolicy: Always
          name: oauth2-proxy
          ports:
            - name: http-pod-port
              containerPort: 4180
              protocol: TCP
          volumeMounts:
            - mountPath: /volume
              name: oauth2-emails
          resources:
            requests:
              cpu: "20m"
              memory: "32Mi"
            limits:
              cpu: "40m"
              memory: "64Mi"
      volumes:
        - name: oauth2-emails
          secret:
            secretName: oauth2-secret
            items:
              - key: EMAIL_WHITELIST
                path: emails
