cluster/apps/oauth2-proxy/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  labels:
    app: oauth2-proxy
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - auth.kblb.io
      secretName: my-certs-oauth2-proxy
  rules:
    - host: auth.kblb.io
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  name: http
